June 22, 2024: Optimized the way the chart is rendered. The most significant change is that we're now using a separate Canvas layer for drag-and-drop, which should improve the framerate when moving items around on larger charts.

January 27, 2024: Redesigned with a sleek new dark theme for a belated celebration of Topsters 3's second birthday. In addition to a total UI overhaul, this redesign adds a chart export feature and enables some UI elements on mobile that were previously hidden on small screens.

August 2, 2023: Updated the search backend for games to support double the previous number of searches per second. This should fix the intermittently failing game searches.

May 30, 2023: Added the ability to build a chart with your Last.fm listening stats in the Imports panel.

January 14, 2023: Overhauled the frontend build process to use Vite and a newer version of Vue. No visible changes, but it should improve performance and make updates easier.