@@ -1,6 +1,6 @@
 <script setup lang="ts">
-import { ref } from 'vue'
 import type { Ref } from 'vue'
+import { ref } from 'vue'
 import { Tabs as TabsEnum } from '../../types'
 import PageTitle from '../PageTitle.vue'
 import Imports from './Imports/index.vue'
@@ -32,7 +32,9 @@ function setCurrentTab(tab: TabsEnum) {
       @set-current-tab="setCurrentTab"
     />
     <div class="sidebar-content">
-      <Options v-if="currentTab === TabsEnum.Options" />
+      <div v-if="currentTab === TabsEnum.Options" class="mobile-options-container">
+        <Options />
+      </div>
       <Imports v-else-if="currentTab === TabsEnum.ImportsExports" />
       <Info v-else-if="currentTab === TabsEnum.Info" />
     </div>
@@ -59,5 +61,9 @@ function setCurrentTab(tab: TabsEnum) {
   background: rgba(20, 20, 20, 0.6);
   border-radius: 0 6px 6px 6px;
   padding: 6px;
+}
+
+.mobile-options-container {
+  margin-bottom: 20px;
 }
 </style>
