@@ -2,8 +2,7 @@
     --ui-bg: #000000;
     --blue-bg: #0F9B8E;
     --text-color: #ffffff;
-    --dark-accent: #ff7f50;
-    --accent: #aae5ca;
+    --accent: #ff7f50;
     --input-bg: #cccccc;
 
     color-scheme: dark;
