@@ -1,3 +1,5 @@
+October 29, 2024: Redesigned the Options menu to be nicer looking, especially on Safari. Also, rewrote the Options menu code to be cleaner and less bug prone.
+
 June 22, 2024: Optimized the way the chart is rendered. The most significant change is that we're now using a separate Canvas layer for drag-and-drop, which should improve the framerate when moving items around on larger charts.
 
 January 27, 2024: Redesigned with a sleek new dark theme for a belated celebration of Topsters 3's second birthday. In addition to a total UI overhaul, this redesign adds a chart export feature and enables some UI elements on mobile that were previously hidden on small screens.
